# DDNS

./: .gitignore  DDNS.config  DDNS.py  README.md  pyproject.toml  requirements.txt
